--- a/doc/Makefile
+++ b/doc/Makefile
@@ -2,9 +2,11 @@
 default:
 	latex gl2ps
 	latex gl2ps
+	latex gl2ps
 	dvips gl2ps -o
 	rm -f gl2ps.toc gl2ps.out gl2ps.aux
 	make html
+	pdflatex gl2ps
 	pdflatex gl2ps
 	pdflatex gl2ps
 
