lowercase html tags

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -13,15 +13,15 @@ default:
 html:
 	rm -f gl2ps.html
 	echo "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0 Transitional//EN\">" >> gl2ps.html
-	echo "<HTML>" >> gl2ps.html
-	echo "<HEAD>" >> gl2ps.html
-	echo "<TITLE>GL2PS: an OpenGL to PostScript printing library</TITLE>" >> gl2ps.html
+	echo "<html>" >> gl2ps.html
+	echo "<head>" >> gl2ps.html
+	echo "<title>GL2PS: an OpenGL to PostScript printing library</title>" >> gl2ps.html
 	echo "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\">" >> gl2ps.html
-	echo "<META name=\"Autor-Handle\" content=\"geuz@geuz.org\">" >> gl2ps.html
-	echo "<LINK href=\"/general.css\" rel=\"stylesheet\">" >> gl2ps.html
-	echo "</HEAD>" >> gl2ps.html
-	echo "<BODY>" >> gl2ps.html
+	echo "<meta name=\"Autor-Handle\" content=\"geuz@geuz.org\">" >> gl2ps.html
+	echo "<link href=\"/general.css\" rel=\"stylesheet\">" >> gl2ps.html
+	echo "</head>" >> gl2ps.html
+	echo "<body>" >> gl2ps.html
 	tth -r -Lgl2ps < gl2ps.tex | sed -e "/<title>/D" >> gl2ps.html
-	echo "<P>Back to <a href=\"/\">geuz.org</a>" >> gl2ps.html
-	echo "</BODY>" >> gl2ps.html
-	echo "</HTML>" >> gl2ps.html
+	echo "<p>Back to <a href=\"/\">geuz.org</a>" >> gl2ps.html
+	echo "</body>" >> gl2ps.html
+	echo "</html>" >> gl2ps.html
