--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,12 +49,23 @@ set(GL2PS_MINOR_VERSION 3)
 set(GL2PS_PATCH_VERSION 4)
 set(GL2PS_EXTRA_VERSION "" CACHE STRING "GL2PS extra version string")
 
+set(GL2PS_VERSION "${GL2PS_MAJOR_VERSION}.${GL2PS_MINOR_VERSION}")
+set(GL2PS_VERSION "${GL2PS_VERSION}.${GL2PS_PATCH_VERSION}${GL2PS_EXTRA_VERSION}")
+
 execute_process(COMMAND date "+%Y%m%d" OUTPUT_VARIABLE DATE 
                 OUTPUT_STRIP_TRAILING_WHITESPACE)
 if(NOT DATE)
   set(DATE "unknown")
 endif(NOT DATE)
 set(GL2PS_DATE "${DATE}")
+
+if(APPLE)
+  set(GL2PS_OS "MacOSX")
+elseif(CYGWIN)
+  set(GL2PS_OS "Windows")
+else(APPLE)
+  set(GL2PS_OS "${CMAKE_SYSTEM_NAME}")
+endif(APPLE)
 
 find_package(OpenGL REQUIRED)
 list(APPEND EXTERNAL_INCLUDES ${OPENGL_INCLUDE_DIR})
@@ -92,6 +103,9 @@ add_library(shared SHARED gl2ps.c gl2ps.h)
 set_target_properties(shared PROPERTIES OUTPUT_NAME gl2ps)
 target_link_libraries(shared ${EXTERNAL_LIBRARIES})
 
+install(TARGETS lib shared DESTINATION lib)
+install(FILES gl2ps.h DESTINATION include)
+
 if(GLUT_FOUND)
   add_executable(gl2psTest WIN32 gl2psTest.c)
   target_link_libraries(gl2psTest shared ${EXTERNAL_LIBRARIES})
@@ -99,71 +113,48 @@ if(GLUT_FOUND)
   target_link_libraries(gl2psTestSimple shared ${EXTERNAL_LIBRARIES})
 endif(GLUT_FOUND)
 
-install(TARGETS lib shared DESTINATION lib)
-install(FILES gl2ps.h DESTINATION include)
+find_package(LATEX)
+if(PDFLATEX_COMPILER)
+  add_custom_command(OUTPUT gl2ps.pdf DEPENDS gl2ps.tex 
+                     COMMAND ${PDFLATEX_COMPILER} ARGS ${CMAKE_SOURCE_DIR}/gl2ps.tex
+                     COMMAND ${PDFLATEX_COMPILER} ARGS ${CMAKE_SOURCE_DIR}/gl2ps.tex
+                     COMMAND ${PDFLATEX_COMPILER} ARGS ${CMAKE_SOURCE_DIR}/gl2ps.tex
+                     COMMAND ${CMAKE_COMMAND} -E copy gl2ps.pdf ${CMAKE_SOURCE_DIR})
+  add_custom_target(pdf ALL DEPENDS gl2ps.pdf)
+  install(FILES gl2ps.pdf DESTINATION share/doc/gl2ps)
+  find_program(TTH tth)
+  if(TTH)
+    add_custom_command(OUTPUT gl2ps.html DEPENDS gl2ps.tex gl2ps.pdf
+                       COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/gl2ps.tex 
+                       ${CMAKE_BINARY_DIR} COMMAND ${TTH} ARGS -w1 gl2ps.tex
+                       COMMAND ${CMAKE_COMMAND} -E remove gl2ps.tex)
+    add_custom_target(html ALL DEPENDS gl2ps.html)
+  endif(TTH)
+endif(PDFLATEX_COMPILER)
 
-# distrib:
-# 	rm -rf gl2ps-${RELEASE}/ gl2ps-${RELEASE}.tgz
-# 	mkdir gl2ps-${RELEASE}
-# 	cd doc && ${MAKE}
-# 	sed -e "s/GL2PS_EXTRA_VERSION.*/GL2PS_EXTRA_VERSION \"\"/g"\
-#            gl2ps.h > gl2ps-${RELEASE}/gl2ps.h
-# 	cp TODO COPYING.GL2PS COPYING.LGPL gl2ps.c gl2psTest.c\
-#            gl2psTestSimple.c doc/gl2ps.pdf gl2ps-${RELEASE}
-# 	tar zcvf gl2ps-${RELEASE}.tgz gl2ps-${RELEASE}
-# 	@echo "********************************************************************"
-# 	@echo "Did you remember to untabify both gl2ps.c and gl2ps.h?"
-# 	@echo "********************************************************************"
 
-# distrib-nightly:
-# 	rm -rf gl2ps-cvs*
-# 	mkdir gl2ps-cvs-${DATE}
-# 	cd doc && ${MAKE} gl2ps.pdf
-# 	sed -e "s/GL2PS_EXTRA_VERSION.*/GL2PS_EXTRA_VERSION \"-cvs-${DATE}\"/g"\
-#            gl2ps.h > gl2ps-cvs-${DATE}/gl2ps.h
-# 	cp TODO COPYING.GL2PS COPYING.LGPL gl2ps.c gl2psTest.c\
-#            gl2psTestSimple.c doc/gl2ps.pdf gl2ps-cvs-${DATE}
-# 	tar zcvf gl2ps-cvs.tgz gl2ps-cvs-${DATE}
-# 	rm -rf gl2ps-cvs-${DATE}
+set(CPACK_PACKAGE_VENDOR "Christophe Geuzaine")
+set(CPACK_PACKAGE_VERSION_MAJOR ${GL2PS_MAJOR_VERSION})
+set(CPACK_PACKAGE_VERSION_MINOR ${GL2PS_MINOR_VERSION})
+set(CPACK_PACKAGE_VERSION_PATCH ${GL2PS_PATCH_VERSION})
+set(CPACK_PACKAGE_DESCRIPTION_FILE ${WELCOME_FILE})
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY 
+    "An OpenGL to PostScript (and PDF, and SVG...) printing library")
+set(CPACK_PACKAGE_FILE_NAME gl2ps-${GL2PS_VERSION}-${GL2PS_OS})
+set(CPACK_PACKAGE_INSTALL_DIRECTORY "gl2ps")
+set(CPACK_RESOURCE_FILE_LICENSE ${LICENSE_FILE})
+set(CPACK_RESOURCE_FILE_README ${WELCOME_FILE})
+set(CPACK_RESOURCE_FILE_WELCOME ${WELCOME_FILE})
+set(CPACK_PACKAGE_EXECUTABLE "gl2ps;gl2ps")
+set(CPACK_STRIP_FILES TRUE)
+set(CPACK_SOURCE_PACKAGE_FILE_NAME gl2ps-${GL2PS_VERSION}-source)
+set(CPACK_SOURCE_GENERATOR TGZ)
+set(CPACK_SOURCE_IGNORE_FILES "${CMAKE_BINARY_DIR}" "/CVS/" "/.svn" "~$" 
+    "DS_Store$" "/tmp/" "/bin/" "/lib/" "gl2ps.tex")
+if(WIN32)
+  set(CPACK_GENERATOR ZIP)
+else(WIN32)
+  set(CPACK_GENERATOR TGZ)
+endif(WIN32)
 
-# gl2ps.ps: gl2ps.tex
-#         rm -f gl2ps.toc gl2ps.out gl2ps.aux
-#         latex gl2ps
-#         latex gl2ps
-#         latex gl2ps
-#         dvips gl2ps -o
-
-# gl2ps.pdf: gl2ps.tex
-#         rm -f gl2ps.toc gl2ps.out gl2ps.aux
-#         pdflatex gl2ps
-#         pdflatex gl2ps
-#         pdflatex gl2ps
-
-# gl2ps.html: gl2ps.tex gl2ps.pdf
-#         rm -f gl2ps.html
-#         echo "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.01 Transitional//EN\">" >> gl2ps.html
-#         echo "<html>" >> gl2ps.html
-#         echo "<head>" >> gl2ps.html
-#         echo "<title>GL2PS: an OpenGL to PostScript printing library</title>" >> gl2ps.html
-#         echo "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\">" >> gl2ps.html
-#         echo "<link href=\"/general.css\" rel=\"stylesheet\" type=\"text/css\">" >> gl2ps.html
-#         echo "</head>" >> gl2ps.html
-#         echo "<body>" >> gl2ps.html
-#         tth -r -Lgl2ps < gl2ps.tex | sed -e "/<title>/D" -e "s|<h1>.*Contents.*</h1>||g" >> gl2ps.html
-#         echo "<p>" >> gl2ps.html
-#         echo "<form action=\"https://www.paypal.com/cgi-bin/webscr\" method=\"post\">" >> gl2ps.html
-#         echo "<input type=\"hidden\" name=\"cmd\" value=\"_xclick\">" >> gl2ps.html
-#         echo "<input type=\"hidden\" name=\"business\" value=\"geuzaine@acm.caltech.edu\">" >> gl2ps.html
-#         echo "<input type=\"hidden\" name=\"item_name\" value=\"GL2PS donation\">" >> gl2ps.html
-#         echo "<input type=\"hidden\" name=\"no_note\" value=\"1\">" >> gl2ps.html
-#         echo "<input type=\"hidden\" name=\"currency_code\" value=\"USD\">" >> gl2ps.html
-#         echo "<input type=\"hidden\" name=\"tax\" value=\"0\">" >> gl2ps.html
-#         echo "<input type=\"image\" src=\"/images/donation.gif\" name=\"submit\"" >> gl2ps.html
-#         echo "       alt=\"Make a donation with PayPal\">" >> gl2ps.html
-#         echo "</form>" >> gl2ps.html
-#         echo "<p>Back to <a href=\"/\">geuz.org</a>" >> gl2ps.html
-#         echo "</body>" >> gl2ps.html
-#         echo "</html>" >> gl2ps.html
-
-# clean:
-#         rm -f *~ *.dvi *.ps *.pdf *.aux *.toc *.log *.html *.out
+include(CPack)
