*** empty log message ***

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,9 +67,11 @@ else(APPLE)
   set(GL2PS_OS "${CMAKE_SYSTEM_NAME}")
 endif(APPLE)
 
-find_package(OpenGL REQUIRED)
-list(APPEND EXTERNAL_INCLUDES ${OPENGL_INCLUDE_DIR})
-list(APPEND EXTERNAL_LIBRARIES ${OPENGL_LIBRARIES})
+find_package(OpenGL)
+if(OPENGL_FOUND)
+  list(APPEND EXTERNAL_INCLUDES ${OPENGL_INCLUDE_DIR})
+  list(APPEND EXTERNAL_LIBRARIES ${OPENGL_LIBRARIES})
+endif(OPENGL_FOUND)
 
 find_package(GLUT)
 if(GLUT_FOUND)
