*** empty log message ***

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,9 @@ endif(DEFINED CMAKE_BUILD_TYPE)
 
 project(gl2ps C)
 
+option(ENABLE_ZLIB "Enable compression using ZLIB" ON)
+option(ENABLE_PNG "Enable PNG support" ON)
+
 set(GL2PS_MAJOR_VERSION 1)
 set(GL2PS_MINOR_VERSION 3)
 set(GL2PS_PATCH_VERSION 4)
@@ -79,34 +82,49 @@ if(GLUT_FOUND)
   list(APPEND EXTERNAL_LIBRARIES ${GLUT_LIBRARIES})
 endif(GLUT_FOUND)
 
-find_package(ZLIB)
-if(ZLIB_FOUND)
-  add_definitions(-DHAVE_ZLIB)
-  list(APPEND EXTERNAL_INCLUDES ${ZLIB_INCLUDE_DIR})
-  list(APPEND EXTERNAL_LIBRARIES ${ZLIB_LIBRARIES})
-endif(ZLIB_FOUND)
+if(ENABLE_ZLIB)
+  find_package(ZLIB)
+  if(ZLIB_FOUND)
+    add_definitions(-DHAVE_ZLIB)
+    list(APPEND EXTERNAL_INCLUDES ${ZLIB_INCLUDE_DIR})
+    list(APPEND EXTERNAL_LIBRARIES ${ZLIB_LIBRARIES})
+  endif(ZLIB_FOUND)
+endif(ENABLE_ZLIB)
 
-find_package(PNG)
-if(PNG_FOUND)
-  list(APPEND EXTERNAL_LIBRARIES ${PNG_LIBRARIES})
-  list(APPEND EXTERNAL_INCLUDES ${PNG_INCLUDE_DIR})
-endif(PNG_FOUND)
+if(ENABLE_PNG)
+  find_package(PNG)
+  if(PNG_FOUND)
+    add_definitions(-DHAVE_PNG)
+    list(APPEND EXTERNAL_LIBRARIES ${PNG_LIBRARIES})
+    list(APPEND EXTERNAL_INCLUDES ${PNG_INCLUDE_DIR})
+  endif(PNG_FOUND)
+endif(ENABLE_PNG)
 
 include_directories(${EXTERNAL_INCLUDES})
 
 add_library(lib STATIC gl2ps.c gl2ps.h)
 set_target_properties(lib PROPERTIES OUTPUT_NAME gl2ps)
 
+add_library(shared SHARED gl2ps.c gl2ps.h)
+target_link_libraries(shared ${EXTERNAL_LIBRARIES})
+set_target_properties(shared PROPERTIES OUTPUT_NAME gl2ps)
 if(MSVC)
-  add_definitions(-DGL2PSDLL -DGL2PSDLL_EXPORTS)
+  set_target_properties(shared PROPERTIES COMPILE_FLAGS "-DGL2PSDLL -DGL2PSDLL_EXPORTS")
 endif(MSVC)
 
-add_library(shared SHARED gl2ps.c gl2ps.h)
-set_target_properties(shared PROPERTIES OUTPUT_NAME gl2ps)
-target_link_libraries(shared ${EXTERNAL_LIBRARIES})
+if(WIN32)
+  set(GL2PS_DOC .)
+else(WIN32)
+  set(GL2PS_DOC share/doc/gl2ps)
+endif(WIN32)
 
 install(TARGETS lib shared DESTINATION lib)
 install(FILES gl2ps.h DESTINATION include)
+install(FILES ${CMAKE_SOURCE_DIR}/README.txt DESTINATION ${GL2PS_DOC})
+install(FILES ${CMAKE_SOURCE_DIR}/COPYING.LGPL DESTINATION ${GL2PS_DOC})
+install(FILES ${CMAKE_SOURCE_DIR}/COPYING.GL2PS DESTINATION ${GL2PS_DOC})
+install(FILES ${CMAKE_SOURCE_DIR}/gl2psTest.c DESTINATION ${GL2PS_DOC})
+install(FILES ${CMAKE_SOURCE_DIR}/gl2psTestSimple.c DESTINATION ${GL2PS_DOC})
 
 if(GLUT_FOUND)
   add_executable(gl2psTest WIN32 gl2psTest.c)
@@ -123,14 +141,14 @@ if(PDFLATEX_COMPILER)
                      COMMAND ${PDFLATEX_COMPILER} ARGS ${CMAKE_SOURCE_DIR}/gl2ps.tex
                      COMMAND ${CMAKE_COMMAND} -E copy gl2ps.pdf ${CMAKE_SOURCE_DIR})
   add_custom_target(pdf ALL DEPENDS gl2ps.pdf)
-  install(FILES gl2ps.pdf DESTINATION share/doc/gl2ps)
+  install(FILES gl2ps.pdf DESTINATION ${GL2PS_DOC})
   find_program(TTH tth)
   if(TTH)
     add_custom_command(OUTPUT gl2ps.html DEPENDS gl2ps.tex gl2ps.pdf
                        COMMAND ${CMAKE_COMMAND} -E copy_if_different 
                        ${CMAKE_SOURCE_DIR}/gl2ps.tex ${CMAKE_BINARY_DIR}/gl2ps.tex
                        COMMAND ${TTH} ARGS -w1 gl2ps.tex)
-    add_custom_target(html ALL DEPENDS gl2ps.html)
+    add_custom_target(html DEPENDS gl2ps.html)
   endif(TTH)
 endif(PDFLATEX_COMPILER)
 
@@ -138,14 +156,14 @@ set(CPACK_PACKAGE_VENDOR "Christophe Geuzaine")
 set(CPACK_PACKAGE_VERSION_MAJOR ${GL2PS_MAJOR_VERSION})
 set(CPACK_PACKAGE_VERSION_MINOR ${GL2PS_MINOR_VERSION})
 set(CPACK_PACKAGE_VERSION_PATCH ${GL2PS_PATCH_VERSION})
-set(CPACK_PACKAGE_DESCRIPTION_FILE ${WELCOME_FILE})
+set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_SOURCE_DIR}/README.txt)
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY 
     "An OpenGL to PostScript (and PDF, and SVG...) printing library")
 set(CPACK_PACKAGE_FILE_NAME gl2ps-${GL2PS_VERSION}-${GL2PS_OS})
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "gl2ps")
-set(CPACK_RESOURCE_FILE_LICENSE ${LICENSE_FILE})
-set(CPACK_RESOURCE_FILE_README ${WELCOME_FILE})
-set(CPACK_RESOURCE_FILE_WELCOME ${WELCOME_FILE})
+set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/COPYING.LGPL)
+set(CPACK_RESOURCE_FILE_README ${CMAKE_SOURCE_DIR}/README.txt)
+set(CPACK_RESOURCE_FILE_WELCOME ${CMAKE_SOURCE_DIR}/README.txt)
 set(CPACK_PACKAGE_EXECUTABLE "gl2ps;gl2ps")
 set(CPACK_STRIP_FILES TRUE)
 set(CPACK_SOURCE_PACKAGE_FILE_NAME gl2ps-${GL2PS_VERSION}-source)
