move snapshots to gitlab

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,14 +176,19 @@ set(CPACK_PACKAGE_VERSION_PATCH ${GL2PS_PATCH_VERSION})
 set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_SOURCE_DIR}/README.txt)
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY 
     "An OpenGL to PostScript (and PDF, and SVG...) printing library")
-set(CPACK_PACKAGE_FILE_NAME gl2ps-${GL2PS_VERSION}-${GL2PS_OS})
+if(GMSH_EXTRA_VERSION MATCHES "-git") # so that we'll overwrite the archives
+  set(CPACK_PACKAGE_FILE_NAME gl2ps-git-${GL2PS_OS})
+  set(CPACK_SOURCE_PACKAGE_FILE_NAME gl2ps-git)
+else(GMSH_EXTRA_VERSION MATCHES "-git")
+  set(CPACK_PACKAGE_FILE_NAME gl2ps-${GL2PS_VERSION}-${GL2PS_OS})
+  set(CPACK_SOURCE_PACKAGE_FILE_NAME gl2ps-${GL2PS_VERSION})
+endif(GMSH_EXTRA_VERSION MATCHES "-git")      
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "gl2ps")
 set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/COPYING.LGPL)
 set(CPACK_RESOURCE_FILE_README ${CMAKE_SOURCE_DIR}/README.txt)
 set(CPACK_RESOURCE_FILE_WELCOME ${CMAKE_SOURCE_DIR}/README.txt)
 set(CPACK_PACKAGE_EXECUTABLE "gl2ps;gl2ps")
 set(CPACK_STRIP_FILES TRUE)
-set(CPACK_SOURCE_PACKAGE_FILE_NAME gl2ps-${GL2PS_VERSION}-source)
 set(CPACK_SOURCE_GENERATOR TGZ)
 set(CPACK_SOURCE_IGNORE_FILES "TODO.txt" "${CMAKE_BINARY_DIR}" "/CVS/"
     "/.svn" "/.git" "~$" "DS_Store$" "/tmp/" "/bin/" "/lib/")
