--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,13 +176,13 @@ set(CPACK_PACKAGE_VERSION_PATCH ${GL2PS_PATCH_VERSION})
 set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_SOURCE_DIR}/README.txt)
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY 
     "An OpenGL to PostScript (and PDF, and SVG...) printing library")
-if(GMSH_EXTRA_VERSION MATCHES "-git") # so that we'll overwrite the archives
+if(GL2PS_EXTRA_VERSION MATCHES "-git") # so that we'll overwrite the archives
   set(CPACK_PACKAGE_FILE_NAME gl2ps-git-${GL2PS_OS})
   set(CPACK_SOURCE_PACKAGE_FILE_NAME gl2ps-git)
-else(GMSH_EXTRA_VERSION MATCHES "-git")
+else(GL2PS_EXTRA_VERSION MATCHES "-git")
   set(CPACK_PACKAGE_FILE_NAME gl2ps-${GL2PS_VERSION}-${GL2PS_OS})
   set(CPACK_SOURCE_PACKAGE_FILE_NAME gl2ps-${GL2PS_VERSION})
-endif(GMSH_EXTRA_VERSION MATCHES "-git")      
+endif(GL2PS_EXTRA_VERSION MATCHES "-git")      
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "gl2ps")
 set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/COPYING.LGPL)
 set(CPACK_RESOURCE_FILE_README ${CMAKE_SOURCE_DIR}/README.txt)
