--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@
 
 variables:
   EXTRA_VERSION: "-git-$CI_COMMIT_SHA"
+  EXTRA_VERSION2: "-git-${CI_COMMIT_SHA:0:8}"
 
 # -----------------------
 # Builds for all branches
@@ -11,6 +12,8 @@ variables:
 linux64_docker:
   image: onelab/ubuntu16.04
   script:
+    - echo $EXTRA_VERSION
+    - echo $EXTRA_VERSION2
     - mkdir build
     - cd build
     - cmake -DGL2PS_EXTRA_VERSION=$EXTRA_VERSION ..
