--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,9 @@ variables:
 linux64_docker:
   image: onelab/ubuntu16.04
   script:
-    - echo ${EXTRA_VERSION:0:13}
     - mkdir build
     - cd build
-    - cmake -DGL2PS_EXTRA_VERSION=$EXTRA_VERSION ..
+    - cmake -DGL2PS_EXTRA_VERSION=${EXTRA_VERSION:0:13} ..
     - make -j 4
   tags:
     - linux64
@@ -24,7 +23,7 @@ windows64_msvc:
   script:
     - md build
     - cd build
-    - cmake -DGL2PS_EXTRA_VERSION=%EXTRA_VERSION% ..
+    - cmake -DGL2PS_EXTRA_VERSION=%EXTRA_VERSION:~0,13% ..
     - msbuild package.vcxproj
   tags:
     - windows64
@@ -40,7 +39,7 @@ source_official:
   script:
     - mkdir build
     - cd build
-    - /usr/local/bin/cmake -DGL2PS_EXTRA_VERSION=$EXTRA_VERSION ..
+    - /usr/local/bin/cmake -DGL2PS_EXTRA_VERSION=${EXTRA_VERSION:0:13} ..
     - make
     - make package_source
     - PKG=`ls gl2ps-*.tar*`; scp -o StrictHostKeyChecking=no -i /home/gitlab-runner/.ssh/id_rsa ${PKG} geuzaine@geuz.org:.www/gl2ps/src/${PKG/\.tar\.gz/\.tgz}
