--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,37 +1,40 @@
 #  GL2PS, an OpenGL to PostScript Printing Library
 #  Copyright (C) 1999-2017 C. Geuzaine
-# 
+#
 #  This program is free software; you can redistribute it and/or
 #  modify it under the terms of either:
-# 
+#
 #  a) the GNU Library General Public License as published by the Free
 #  Software Foundation, either version 2 of the License, or (at your
 #  option) any later version; or
-# 
+#
 #  b) the GL2PS License as published by Christophe Geuzaine, either
 #  version 2 of the License, or (at your option) any later version.
-# 
+#
 #  This program is distributed in the hope that it will be useful, but
 #  WITHOUT ANY WARRANTY; without even the implied warranty of
 #  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See either
 #  the GNU Library General Public License or the GL2PS License for
 #  more details.
-# 
+#
 #  You should have received a copy of the GNU Library General Public
 #  License along with this library in the file named "COPYING.LGPL";
 #  if not, write to the Free Software Foundation, Inc., 675 Mass Ave,
 #  Cambridge, MA 02139, USA.
-# 
+#
 #  You should have received a copy of the GL2PS License with this
 #  library in the file named "COPYING.GL2PS"; if not, I will be glad
 #  to provide one.
-# 
+#
 #  For the latest info about gl2ps and a full list of contributors,
 #  see http://www.geuz.org/gl2ps/.
-# 
+#
 #  Please report all bugs and problems to <gl2ps@geuz.org>.
 
-cmake_minimum_required(VERSION 2.4 FATAL_ERROR)
+cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
+
+# do not warn about non-definition of WIN32 on Cygwin
+set(CMAKE_LEGACY_CYGWIN_WIN32 0)
 
 # if CMAKE_BUILD_TYPE is specified use it; otherwise set the default
 # build type to "RelWithDebInfo" ("-O2 -g" with gcc) prior to calling
@@ -55,7 +58,7 @@ set(GL2PS_EXTRA_VERSION "" CACHE STRING "GL2PS extra version string")
 set(GL2PS_VERSION "${GL2PS_MAJOR_VERSION}.${GL2PS_MINOR_VERSION}")
 set(GL2PS_VERSION "${GL2PS_VERSION}.${GL2PS_PATCH_VERSION}${GL2PS_EXTRA_VERSION}")
 
-execute_process(COMMAND date "+%Y%m%d" OUTPUT_VARIABLE DATE 
+execute_process(COMMAND date "+%Y%m%d" OUTPUT_VARIABLE DATE
                 OUTPUT_STRIP_TRAILING_WHITESPACE)
 if(NOT DATE)
   set(DATE "unknown")
@@ -65,7 +68,20 @@ set(GL2PS_DATE "${DATE}")
 if(APPLE)
   set(GL2PS_OS "MacOSX")
 elseif(CYGWIN)
-  set(GL2PS_OS "Windows")
+  # detect if we use the MinGW compilers on Cygwin - if we do, handle the build
+  # as a pure Windows build
+  if(CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR
+     CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    execute_process(COMMAND ${CMAKE_CXX_COMPILER} -dumpmachine
+                    OUTPUT_VARIABLE CXX_COMPILER_MACHINE
+                    OUTPUT_STRIP_TRAILING_WHITESPACE)
+    if(CXX_COMPILER_MACHINE MATCHES "mingw")
+      set(GMSH_OS "Windows")
+      set(WIN32 1)
+      add_definitions(-DWIN32)
+    endif(CXX_COMPILER_MACHINE MATCHES "mingw")
+  endif(CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR
+        CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 else(APPLE)
   set(GL2PS_OS "${CMAKE_SYSTEM_NAME}")
 endif(APPLE)
@@ -119,14 +135,13 @@ if(OPENGL_FOUND)
 
   add_library(shared SHARED gl2ps.c gl2ps.h)
   target_link_libraries(shared ${EXTERNAL_LIBRARIES})
-  set_target_properties(shared PROPERTIES OUTPUT_NAME gl2ps)
-  set_target_properties(shared PROPERTIES
+  set_target_properties(shared PROPERTIES OUTPUT_NAME gl2ps
     VERSION ${GL2PS_MAJOR_VERSION}.${GL2PS_MINOR_VERSION}.${GL2PS_PATCH_VERSION}
-    SOVERSION ${GL2PS_MAJOR_VERSION})
-  if(MSVC)
-    set_target_properties(shared PROPERTIES COMPILE_FLAGS "-DGL2PSDLL -DGL2PSDLL_EXPORTS")
-  endif(MSVC)
-
+    SOVERSION ${GL2PS_MAJOR_VERSION}.${GL2PS_MINOR_VERSION})
+  if(WIN32 OR CYGWIN)
+    set_target_properties(shared PROPERTIES PREFIX "" IMPORT_PREFIX ""
+      IMPORT_SUFFIX ".lib" COMPILE_FLAGS "-DGL2PSDLL -DGL2PSDLL_EXPORTS")
+  endif(WIN32 OR CYGWIN)
   install(TARGETS lib shared DESTINATION lib${LIB_SUFFIX})
 endif(OPENGL_FOUND)
 
@@ -152,7 +167,7 @@ endif(GLUT_FOUND)
 
 find_package(LATEX)
 if(PDFLATEX_COMPILER)
-  add_custom_command(OUTPUT gl2ps.pdf DEPENDS gl2ps.tex 
+  add_custom_command(OUTPUT gl2ps.pdf DEPENDS gl2ps.tex
                      COMMAND ${PDFLATEX_COMPILER} ARGS ${CMAKE_SOURCE_DIR}/gl2ps.tex
                      COMMAND ${PDFLATEX_COMPILER} ARGS ${CMAKE_SOURCE_DIR}/gl2ps.tex
                      COMMAND ${PDFLATEX_COMPILER} ARGS ${CMAKE_SOURCE_DIR}/gl2ps.tex
@@ -162,7 +177,7 @@ if(PDFLATEX_COMPILER)
   find_program(TTH tth)
   if(TTH)
     add_custom_command(OUTPUT gl2ps.html DEPENDS gl2ps.tex gl2ps.pdf
-                       COMMAND ${CMAKE_COMMAND} -E copy_if_different 
+                       COMMAND ${CMAKE_COMMAND} -E copy_if_different
                        ${CMAKE_SOURCE_DIR}/gl2ps.tex ${CMAKE_BINARY_DIR}/gl2ps.tex
                        COMMAND ${TTH} ARGS -w1 gl2ps.tex)
     add_custom_target(html DEPENDS gl2ps.html)
@@ -174,7 +189,7 @@ set(CPACK_PACKAGE_VERSION_MAJOR ${GL2PS_MAJOR_VERSION})
 set(CPACK_PACKAGE_VERSION_MINOR ${GL2PS_MINOR_VERSION})
 set(CPACK_PACKAGE_VERSION_PATCH ${GL2PS_PATCH_VERSION})
 set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_SOURCE_DIR}/README.txt)
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY 
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY
     "An OpenGL to PostScript (and PDF, and SVG...) printing library")
 if(GL2PS_EXTRA_VERSION MATCHES "-git.*") # so that we'll overwrite the archives
   set(CPACK_PACKAGE_FILE_NAME gl2ps-git-${GL2PS_OS})
@@ -182,7 +197,7 @@ if(GL2PS_EXTRA_VERSION MATCHES "-git.*") # so that we'll overwrite the archives
 else(GL2PS_EXTRA_VERSION MATCHES "-git.*")
   set(CPACK_PACKAGE_FILE_NAME gl2ps-${GL2PS_VERSION}-${GL2PS_OS})
   set(CPACK_SOURCE_PACKAGE_FILE_NAME gl2ps-${GL2PS_VERSION})
-endif(GL2PS_EXTRA_VERSION MATCHES "-git.*")      
+endif(GL2PS_EXTRA_VERSION MATCHES "-git.*")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "gl2ps")
 set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/COPYING.LGPL)
 set(CPACK_RESOURCE_FILE_README ${CMAKE_SOURCE_DIR}/README.txt)
