--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,8 +139,10 @@ if(OPENGL_FOUND)
     VERSION ${GL2PS_MAJOR_VERSION}.${GL2PS_MINOR_VERSION}.${GL2PS_PATCH_VERSION}
     SOVERSION ${GL2PS_MAJOR_VERSION}.${GL2PS_MINOR_VERSION})
   if(WIN32 OR CYGWIN)
-    set_target_properties(shared PROPERTIES PREFIX "" IMPORT_PREFIX ""
-      IMPORT_SUFFIX ".lib" COMPILE_FLAGS "-DGL2PSDLL -DGL2PSDLL_EXPORTS")
+    # set_target_properties(shared PROPERTIES PREFIX "" IMPORT_PREFIX ""
+    #   IMPORT_SUFFIX ".lib" COMPILE_FLAGS "-DGL2PSDLL -DGL2PSDLL_EXPORTS")
+    set_target_properties(shared PROPERTIES
+        COMPILE_FLAGS "-DGL2PSDLL -DGL2PSDLL_EXPORTS")
   endif(WIN32 OR CYGWIN)
   install(TARGETS lib shared RUNTIME DESTINATION bin
                              LIBRARY DESTINATION lib${LIB_SUFFIX}
