use docker for source build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,12 +4,19 @@
 variables:
   EXTRA_VERSION: "-git-$CI_COMMIT_SHA"
 
+.ssh_config: &ssh_config
+  before_script:
+    - echo "$SSH_TOKEN" > ~/.ssh/id_rsa
+    - echo "Host *" > ~/.ssh/config
+    - echo "StrictHostKeyChecking no" >> ~/.ssh/config
+    - chmod 700 ~/.ssh/id_rsa ~/.ssh/config
+
 # -----------------------
 # Builds for all branches
 # -----------------------
 
 linux64_docker:
-  image: onelab/ubuntu16.04
+  image: onelab/ubuntu18.04
   script:
     - mkdir build
     - cd build
@@ -18,7 +25,7 @@ linux64_docker:
   tags:
     - linux64
     - docker
-    
+
 windows64_msvc:
   script:
     - md build
@@ -28,21 +35,24 @@ windows64_msvc:
   tags:
     - windows64
     - official
-    
+
 # ----------------------------------------------
 # Official source snapshots (master branch only)
 # ----------------------------------------------
 
 source_official:
+  image: onelab/ubuntu18.04.simple
   only:
-    - master
+    - master@gl2ps/gl2ps
+  <<: *ssh_config
   script:
     - mkdir build
     - cd build
-    - /usr/local/bin/cmake -DGL2PS_EXTRA_VERSION=${EXTRA_VERSION:0:13} ..
+    - cmake -DGL2PS_EXTRA_VERSION=${EXTRA_VERSION:0:13} ..
     - make
     - make package_source
-    - PKG=`ls gl2ps-*.tar*`; scp -o StrictHostKeyChecking=no -i /home/gitlab-runner/.ssh/id_rsa ${PKG} geuzaine@geuz.org:.www/gl2ps/src/${PKG/\.tar\.gz/\.tgz}
+    - PKG=`ls gl2ps-*.tar*`
+    - scp ${PKG} geuzaine@geuz.org:.www/gl2ps/src/${PKG/\.tar\.gz/\.tgz}
   tags:
     - linux64
-    - official
+    - docker
